Getting tests working.

--- a/app/views/videofiles/index.html.erb
+++ b/app/views/videofiles/index.html.erb
@@ -20,7 +20,7 @@
 <% end %>
 </table>
 
-<%= will_paginate @posts %>
+<%= will_paginate @videofiles %>
 <br />
 
 <%= link_to 'New Videofile', new_videofile_path %>
