--- a/app/views/videofiles/index.html.erb
+++ b/app/views/videofiles/index.html.erb
@@ -1,32 +1,26 @@
 <h1>Listing videofiles</h1>
 
-<table class="info" width="100%">
-  <tr>
-		<th></th>
-    <th>Title</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
+<table><tr>
 <% @videofiles.each do |videofile| %>
-  <tr>
-		<td>
-			<%= link_to videofile do %>
-				<%= image_tag(videofile.poster.url(:mainpage)) if videofile.poster? %>
-			<% end %>
-		</td>
-    <td class="title">
-			<%= link_to videofile do %>	
-				<%= videofile.title %>
-			<% end %>
-		</td>
-    <td><%= link_to 'Edit', edit_videofile_path(videofile) %></td>
-    <td><%= link_to 'Destroy', videofile, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+<td class="content-block" id="item-<%=videofile.id%>">
+	<p>
+		<%= link_to videofile do %>
+			<%= image_tag(videofile.poster.url(:mainpage)) if videofile.poster? %>
+		<% end %>
+	</p>
+	<p>
+		<%= link_to videofile, :class => "content-link" do %>	
+			<%= videofile.title %>
+		<% end %>
+	</p>
+	<p>
+    <%= link_to 'Edit', edit_videofile_path(videofile) %> &nbsp;
+    <%= link_to 'Destroy', videofile, :confirm => 'Are you sure?', :method => :delete %>
+	</p>
+</td>
+<%=(cycle("","","</tr><tr>").html_safe) %>
 <% end %>
-</table>
-
+</tr></table>
 <%= will_paginate @videofiles %>
 <br />
 
