--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -12,6 +12,10 @@ a {
   color: #0000FF;
 }
 
+p {
+	margin:2px;
+}
+
 .clear {
   clear: both;
   height: 0;
@@ -75,10 +79,10 @@ a {
 }
 
 .content-block {
-	width:250px;
-	height:250px;
-	overflow:hidden;
-	padding:10px;
+	width:30%;
+/*	height:250px;
+	overflow:hidden;*/
+	padding:5px 10px;
 	vertical-align: middle;
 	text-align: center;
 	float: left;
