--- a/app/views/videofiles/index.html.erb
+++ b/app/views/videofiles/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing videofiles</h1>
 
-<table><tr>
+<table width="100%"><tr>
 <% @videofiles.each do |videofile| %>
 <td class="content-block" id="item-<%=videofile.id%>">
 	<p>
