--- a/app/views/videofiles/show.html.erb
+++ b/app/views/videofiles/show.html.erb
@@ -1,14 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Title:</b>
-  <%= @videofile.title %>
-</p>
+<div class="content">
+	<h2><%= @videofile.title %></h2>
 
-<p>
-  <b>Body:</b>
-  <%= @videofile.body.html_safe %>
-</p>
+	<p><%= @videofile.body.html_safe %></p>
+</div>
 
 
 <%= link_to 'Edit', edit_videofile_path(@videofile) %> |
