Added base files for video player, attachments for videofile, tests for show.html.erb

--- a/app/views/videofiles/_form.html.erb
+++ b/app/views/videofiles/_form.html.erb
@@ -23,6 +23,10 @@
 		 <%= f.label :poster %><br />
 		 <%= f.file_field :poster %>
 	</div>
+	<div class="field">
+		 <%= f.label :original %><br />
+		 <%= f.file_field :original %>
+	</div>	
   <div class="actions">
     <%= f.submit %>
   </div>
