--- a/app/views/videofiles/show.html.erb
+++ b/app/views/videofiles/show.html.erb
@@ -3,6 +3,8 @@
 <div class="content">
 	<h2><%= @videofile.title %></h2>
 
+	<%= image_tag @videofile.poster.url %>
+	
 	<p><%= @videofile.body.html_safe %></p>
 </div>
 
