--- a/app/views/videofiles/show.html.erb
+++ b/app/views/videofiles/show.html.erb
@@ -12,7 +12,7 @@
 	<p>
 	  <% if @videofile.repacked? %>
 	        <a 
-	                href="http://<%=APP_CONFIG[:domain]%><%= @videofile.repacked.url %>"   
+	                href="<%= @videofile.repacked.url %>"   
 	                style="display:block;width:520px;height:330px"  
 	                id="player"></a> 
 
@@ -26,7 +26,11 @@
 	                        }
 	                });
 	        </script>
-	        <% end %>
+		<% else%>
+			<h4>
+				File is not yet ready.
+			</h4>
+    <% end %>
 	</p>	
 </div>
 
