Fixed template for videofile

--- a/app/views/videofiles/show.html.erb
+++ b/app/views/videofiles/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= javascript_include_tag 'vendor/flowplayer/flowplayer-3.2.4.min.js' %>
+
 <div class="content">
 	<h2><%= @videofile.title %></h2>
 
