--- a/app/views/videofiles/_form.html.erb
+++ b/app/views/videofiles/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
+    <%= f.label :category %><br />
+    <%= f.select(:category_id, Category.all.collect {|p| [ p.title, p.id ] }, {:include_blank => 'None'}) %>    
+  </div>
+  <div class="field">
     <%= f.label :body %><br />
     <%= f.text_area :body, :class => "mceEditor" %>
   </div>
