--- a/app/views/videofiles/index.html.erb
+++ b/app/views/videofiles/index.html.erb
@@ -1,5 +1,15 @@
 <h1>Listing videofiles</h1>
 
+<table width="100%">
+  <tr>
+    <% Category.find(:all).each do |category|%>
+    <td>
+      <%=link_to category.title, :controller => 'videofiles', :category => category.id%>
+    </td>
+    <% end %>
+  </tr>
+</table>
+
 <table width="100%"><tr>
 <% @videofiles.each do |videofile| %>
 <td class="content-block" id="item-<%=videofile.id%>">
