--- a/app/views/videofiles/show.html.erb
+++ b/app/views/videofiles/show.html.erb
@@ -30,7 +30,7 @@
 	        </script>
 		<% else%>
 			<h4>
-				File is not yet ready.
+				<%= t "file_not_processed" %>
 			</h4>
     <% end %>
 	</p>	
