--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -15,6 +15,12 @@
     <%= f.label :title %><br />
     <%= f.text_field :title %>
   </div>
+  
+  <div class="field">
+    <%= f.label :parent %><br />
+    <%= f.select(:parent_id, Category.input_list) %>    
+  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
