--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : APP_CONFIG[:site_title] || "Untitled" %></title>
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag :defaults %>
     <%= csrf_meta_tag %>
 	  <%= include_tiny_mce_if_needed %>
     <%= yield(:head) %>
   </head>
-  <body>
+  <body>    
     <div id="container">
-      <% flash.each do |name, msg| %>
+      <div id="nav">
+        <%= render_crumbs :separator => ' > ' %>
+      </div>
+      
+      <!--<% flash.each do |name, msg| %>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
-      <% end %>
-      <%= content_tag :h1, yield(:title) if show_title? %>
+      <% end %>-->
+      
+      <!--<%= content_tag :h1, yield(:title) if show_title? %>-->
+      
       <%= yield %>
     </div>
   </body>
